added custom title

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,3 +1,5 @@
+<% provide :title, "Nové hledání" %>
+
 <div class="row-above">
 	<div class="row">
 		<div class="large-10 large-centered columns">
