--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,26 +1,7 @@
 <% provide :title, "Výsledek hledání" %>
 
-<div class="row">
-	<div class="row">
-		<h2>Výsledek hledání</h2>
-	</div>
-	<div class="row">
-		<div class="large-9 columns">	
-			<h3 class="subheader"><%= @status_main %></h3>
-			<h3><small>Status: </small><%= @company_status %></h3> 
-			<h3><small>Název: </small><%= @company_name %></h3>
-			<h3><small>IČ: </small><%= @company_ico %></h3>
-			<h3><small>Datum založení: </small><%= @company_datum %></h3>
-			<h3><small>Pravní forma: </small><%= @company_type %></h3>
-			<h3><small>Předmět podnikání: </small></h3>
-			<ul id="seznam">	
-				<% @company_business.each do |cb| %>
-				<li><%= cb.text %></li>	
-			<% end %>
-			</ul>
-		</div>
-		<div class="large-3 columns">
-			<%= link_to 'nové hledání', new_company_path, :class => "button" %>
-		</div>
-	</div>
-</div>
+<% if @company_ico.blank? %>
+	<%= render 'nocompany_exist' %>
+<% else %>
+	<%= render 'company_exist' %>
+<% end %>
