--- a/app/views/companies/_errors.html.erb
+++ b/app/views/companies/_errors.html.erb
@@ -1,13 +1,9 @@
 
 <% if object.errors.any? %>
-	<div data-alert class="alert-box">
- 		The form contains <%= pluralize(object.errors.count, "error") %><a href="#" class="close">&times;</a>
- 	</div>	
+ <%= pluralize(object.errors.count, "error") %>
     <ul>
-    <% object.errors.full_messages.each do |msg| %>
-    	<div data-alert class="alert-box alert"> 
-      	<li>* <%= msg %></li><a href="#" class="close">&times;</a>
-      </div>	
+    <% object.errors.full_messages.each do |msg| %> 
+      <li>* <%= msg %></li>
     <% end %>
     </ul>
 <% end %>
